[package]
name = "llvm_rust_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llvm-sys = "160"

[build-dependencies]
# Define conditional dependencies based on the platform
llvm-sys = { version = "160", path = "/path/to/llvm-artifacts.tar.gz" }

[target.'cfg(windows)'.dependencies]
# Specify Windows-specific dependencies
llvm-sys = { version = "160", features = ["windows"] }

[target.'cfg(unix)'.dependencies]
# Specify Unix-specific dependencies
llvm-sys = { version = "160", features = ["unix"] }
